<resources>
    <string name="app_name">Homework 3</string>
    <string name="heading_get_random_number">Get a Random Number!</string>
    <string name="without_replacement">Without Replacement</string>
    <string name="hint_low">0</string>
    <string name="hint_high">100</string>
    <string name="output">0</string>
    <string name="get_output">GET NUMBER</string>
    <string name="next_fragment_diceroller">Dice Roller</string>
    <string name="next_fragment_tipcalculator">Tip Calculator</string>
    <string name="roll">Roll</string>
    <string name="dice1">dice1</string>
    <string name="dice2">dice2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>